--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/ClassSchedule/">課表</a>
-    <a href="/Whoscall Layout/">Whoscall 切版</a>
+    <a href="/ClassSchedule/classSchedule.html">課表</a>
+    <a href="/Whoscall Layout/whoscallLayout.html">Whoscall 切版</a>
 </body>
 </html>
