--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/ClassSchedule/classSchedule.html">課表</a>
-    <a href="/Whoscall Layout/whoscallLayout.html">Whoscall 切版</a>
+    <ul>
+        <li>
+            <a href="/ClassSchedule/classSchedule.html">課表切版練習</a>
+        </li>
+        <li>
+            <a href="/Whoscall Layout/whoscallLayout.html">Whoscall切版練習</a>
+        </li>
+    </ul>
 </body>
 </html>
