--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="/ClassSchedule/classSchedule.html">課表切版練習</a>
         </li>
         <li>
-            <a href="/Whoscall Layout/whoscallLayout.html">Whoscall切版練習</a>
+            <a href="/Whoscall Layout/whoscallLayout-2.html">Whoscall切版練習</a>
         </li>
     </ul>
 </body>
