--- a/Whoscall Layout/whoscallLayout-2.html
+++ b/Whoscall Layout/whoscallLayout-2.html
@@ -330,7 +330,7 @@
                 <a href="https://whoscall.com/zh-hant/privacy">隱私權政策</a>
             </div>
             <div class="Language">
-                <i class="fa-light fa-globe"></i>
+                <i class="fa-thin fa-globe"></i>
                 <select name="Language" id="Language">
                     <option value="">English</option>
                     <option value="">中文</option>
