--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
             <a href="/Whoscall Layout/whoscallLayout-2.html">Whoscall切版練習2</a>
         </li>
+        <li>
+            <a href="/Toyota Layout/toyotaLayout.html">Toyata切版練習</a>
+        </li>
     </ul>
 </body>
 </html>
