--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="/Whoscall Layout/whoscallLayout-2.html">Whoscall切版練習2</a>
         </li>
         <li>
-            <a href="/Toyota Layout/toyotaLayout.html">Toyata切版練習</a>
+            <a href="/Toyota Layout/toyotaLayout.html">Toyota切版練習</a>
         </li>
     </ul>
 </body>
