--- a/Toyota Layout/toyotaLayout.html
+++ b/Toyota Layout/toyotaLayout.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="pic">
-                    <img src="./img/toyplay-iconta4.png" alt="">
+                    <img src="./img/toyota4.png" alt="">
                     <div class="play-icon">▶</div>
                 </div>
                 <div class="text-content">
