--- a/RWD List Layout/RWD List Layout.html
+++ b/RWD List Layout/RWD List Layout.html
@@ -30,8 +30,8 @@
 
                         <!-- 第二層 -->
                         <ul class="dropdown-item">
-                            <li><a href="#">選單第二層</a></li>
-                            <li><a href="#">選單第二層</a></li>
+                            <li class="second-nav"><a href="#">選單第二層</a></li>
+                            <li class="second-nav"><a href="#">選單第二層</a></li>
                         </ul>
                     </li>
                     <li class="first-nav dropdown">
@@ -48,13 +48,13 @@
 
                                 <!-- 第三層 -->
                                 <ul class="second-dropdown-item">
-                                    <li><a href="#">選單第三層</a></li>
-                                    <li><a href="#">選單第三層</a></li>
+                                    <li class="third-nav"><a href="#">選單第三層</a></li>
+                                    <li class="third-nav"><a href="#">選單第三層</a></li>
                                 </ul>
                             </li>
 
-                            <li><a href="#">選單第二層</a></li>
-                            <li><a href="#">選單第二層</a></li>
+                            <li class="second-nav"><a href="#">選單第二層</a></li>
+                            <li class="second-nav"><a href="#">選單第二層</a></li>
                         </ul>
                     </li>
                     <li class="first-nav dropdown">
@@ -64,8 +64,8 @@
 
                         <!-- 第二層 -->
                         <ul class="dropdown-item">
-                            <li><a href="#">選單第二層</a></li>
-                            <li><a href="#">選單第二層</a></li>
+                            <li class="second-nav"><a href="#">選單第二層</a></li>
+                            <li class="second-nav"><a href="#">選單第二層</a></li>
                         </ul>
                     </li>
                     <li class="first-nav"><a href="#">選單第一層</a></li>
