--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li>
             <a href="/Altis 360/Altis 360.html">Altis 360</a>
         </li>
+        <li>
+            <a href="/LOLCardGrid/">LOL英雄聯盟卡牌資料表格</a>
+        </li>
     </ul>
 </body>
 </html>
