--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
 <body>
     <ul><h1>作業表單</h1>
         <li>
-            <a href="/ClassSchedule/classSchedule.html">課表切版練習</a>
+            <a href="./ClassSchedule/classSchedule.html">課表切版練習</a>
         </li>
         <li>
-            <a href="Whoscall Layout/whoscallLayout-1.html">Whoscall切版練習1</a>
+            <a href="./Whoscall Layout/whoscallLayout-1.html">Whoscall切版練習1</a>
         </li>
         <li>
-            <a href="/Whoscall Layout/whoscallLayout-2.html">Whoscall切版練習2</a>
+            <a href="./Whoscall Layout/whoscallLayout-2.html">Whoscall切版練習2</a>
         </li>
         <li>
-            <a href="/Toyota Layout/toyotaLayout.html">Toyota切版練習</a>
+            <a href="./Toyota Layout/toyotaLayout.html">Toyota切版練習</a>
         </li>
         <li>
-            <a href="/RWD Layout/RWDLayout.html">RWD在手機、平板、電腦上的排版練習</a>
+            <a href="./RWD Layout/RWDLayout.html">RWD在手機、平板、電腦上的排版練習</a>
         </li>
         <li>
-            <a href="/Utimate Number/Ulitimate Number.html">終極密碼</a>
+            <a href="./Utimate Number/Ulitimate Number.html">終極密碼</a>
         </li>
         <li>
-            <a href="/RWD List Layout/RWD List Layout.html">RWD選單切版</a>
+            <a href="./RWD List Layout/RWD List Layout.html">RWD選單切版</a>
         </li>
         <li>
-            <a href="/Altis 360/Altis 360.html">Altis 360</a>
+            <a href="./Altis 360/Altis 360.html">Altis 360</a>
         </li>
         <li>
-            <a href="/LOLCardGrid/LOLCardGrid.html">LOL英雄聯盟卡牌資料表格</a>
+            <a href="./LOLCardGrid/LOLCardGrid.html">LOL英雄聯盟卡牌資料表格</a>
         </li>
     </ul>
 </body>
