--- a/utimate-number/utimate-number.html
+++ b/utimate-number/utimate-number.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>終極密碼</title>
     <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="./ulitimate number.css">
+    <link rel="stylesheet" href="./utimate-number.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             <button class="btn-number">0</button>
         </div>
     </div>
-    <script src="./ulitimate number.js"></script>
+    <script src="./utimate-number.js"></script>
 </body>
 
 </html>
