--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <li>
             <a href="./lol-card-grid/lol-card-grid.html">LOL英雄聯盟卡牌資料表格</a>
         </li>
-
+        <li>
+            <a href="./guess-number/guess-number.html">1A2B</a>
+        </li>
     </ul>
 </body>
 </html>
