--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <li>
             <a href="./guess-number/guess-number.html">1A2B</a>
         </li>
+        <li>
+            <a href="./apple-product-selection/apple-product-selection.html">蘋果產品目錄選擇器</a>
+        </li>
+        <li>
+            <a href="./calendar-layout/calendar-layout.html">自動生成行事曆</a>
+        </li>
     </ul>
 </body>
 </html>
