--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <a href="./lol-card-grid/lol-card-grid.html">LOL英雄聯盟卡牌資料表格</a>
         </li>
         <li>
-            <a href="./guess-number/guess-number.html">1A2B</a>
+            <a href="./guess-number/guess-number-div.html">1A2B - Div版</a>
+            <a href="./guess-number/guess-number-textarea.html">1A2B - Textarea版</a>
         </li>
         <li>
             <a href="./apple-product-selection/apple-product-selection.html">蘋果產品目錄選擇器</a>
