--- a/guess-number/guess-number-textarea.html
+++ b/guess-number/guess-number-textarea.html
@@ -44,12 +44,12 @@
         let numInput = document.querySelector('#num-input');
         let output = document.querySelector(".output");
         let enterBtn = document.querySelector('#button-addon2');
-        let showansBtn = document.querySelector('#showanswer');
+        let showAnsBtn = document.querySelector('#showanswer');
         let resetBtn = document.querySelector('#reset');
         let startBtn = document.querySelector('#startGame');
 
         let numberArray = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9];
-        fisherYatesShuffle(numberArray);
+        createRandom(numberArray);
         let answer4 = numberArray.slice(0, 4);
         let answerString = answer4.toString();
         let answer = answerString.replace(/,/g, '');
@@ -57,13 +57,13 @@
 
         window.onload = function () {
             enterBtn.disabled = true;
-            showansBtn.disabled = true;
+            showAnsBtn.disabled = true;
             resetBtn.disabled = true;
         }
 
 
         //製造亂數
-        function fisherYatesShuffle(arr) {
+        function createRandom(arr) {
             for (var i = arr.length - 1; i > 0; i--) {
                 var j = Math.floor(Math.random() * (i + 1)); //random index
                 [arr[i], arr[j]] = [arr[j], arr[i]]; // swap
@@ -73,7 +73,7 @@
         function startGame() {
             console.log(answer);
             enterBtn.disabled = false;
-            showansBtn.disabled = false;
+            showAnsBtn.disabled = false;
             resetBtn.disabled = false;
             startBtn.disabled = true;
             output.textContent = '---遊戲開始---\r\n'
@@ -123,7 +123,7 @@
                 if (a == 4) {
                     alert(`恭喜猜對!!!答案是${answer}`);
                     enterBtn.disabled = true;
-                    showansBtn.disabled = true;
+                    showAnsBtn.disabled = true;
                     startBtn.disabled = true;
                     output.textContent += '---遊戲結束---\r\n'
                 }
