--- a/calendar-layout/calendar-layout.html
+++ b/calendar-layout/calendar-layout.html
@@ -62,8 +62,8 @@
                     <input id="edit-value" type="text">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger">刪除</button>
-                    <button type="button" class="btn btn-primary">修改</button>
+                    <button onclick="deleteTodoItem()" type="button" class="btn btn-danger">刪除</button>
+                    <button onclick="editTodoItem()" type="button" class="btn btn-primary">修改</button>
                 </div>
             </div>
         </div>
@@ -78,6 +78,8 @@
         const today = new Date() //今天
         let year = today.getFullYear() //年
         let month = today.getMonth() //月份 1月是0
+
+        let currentIndex
         //DOM
         const yearMonthText = document.querySelector('.year-month')
         const dateArea = document.querySelector('tbody')
@@ -122,9 +124,19 @@
                                 let ul = document.createElement('ul')
 
                                 let todoList = JSON.parse(localStorage.getItem(`${year}-${month+1}-${day}`))
-                                todoList.forEach(item => {
+                                todoList.forEach((item, index) => {
                                     let li = document.createElement('li')
                                     li.innerText = item.title
+
+                                    li.onclick = function(e) {
+                                        editDateInput.value = `${year}-${month+1}-${d}`
+                                        editValueInput.value = item.title
+
+                                        currentIndex = index
+
+                                        bootstrap.Modal.getOrCreateInstance(editModal).show()
+                                        e.stopPropagation()
+                                    }
                                     
                                     ul.appendChild(li)
                                 })
@@ -166,6 +178,7 @@
             renderDate()
         }
 
+        //新增備忘錄
         function addTodoItem() {
             let date = addDateInput.value
             let todoItem = addValueInput.value
@@ -186,6 +199,38 @@
             localStorage.setItem(date, JSON.stringify(todoList))
 
             bootstrap.Modal.getOrCreateInstance(addModal).hide()
+
+            renderDate()
+        }
+
+        //編輯備忘錄
+        function editTodoItem() {
+            let date = editDateInput.value
+            let todoItem = editValueInput.value
+
+            let todoList = JSON.parse(localStorage.getItem(date))
+            
+            todoList[currentIndex] = {
+                title: todoItem
+            }
+
+            localStorage.setItem(date, JSON.stringify(todoList))
+
+            bootstrap.Modal.getOrCreateInstance(editModal).hide()
+
+            renderDate()
+        }
+
+        //刪除備忘錄
+        function deleteTodoItem() {
+            let date = editDateInput.value
+
+            let todoList = JSON.parse(localStorage.getItem(date))
+            todoList.splice(currentIndex, 1)
+
+            localStorage.setItem(date, JSON.stringify(todoList))
+
+            bootstrap.Modal.getOrCreateInstance(editModal).hide()
 
             renderDate()
         }
