--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="./guess-number/guess-number-textarea.html">1A2B - Textarea版</a>
         </li>
         <li>
-            <a href="./apple-product-selection/im-not-real-apple.html">蘋果產品目錄選擇器</a>
+            <a href="./apple-product-selection/im-not-real-apple.html">蘋果產品目錄選擇</a>
         </li>
         <li>
             <a href="./calendar-layout/calendar-layout.html">自動生成行事曆</a>
