--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="./apple-product-selection/im-not-real-apple.html">蘋果產品目錄選擇</a>
         </li>
         <li>
-            <a href="./calendar-layout/calendar-layout.html">自動生成行事曆</a>
+            <a href="./calendar-layout/calendar-layout-simple.html">自動生成行事曆-簡單版</a>
         </li>
     </ul>
 </body>
