--- a/apple-product-selection/im-not-real-apple.html
+++ b/apple-product-selection/im-not-real-apple.html
@@ -88,7 +88,7 @@
             display: none;
         }
     </style>
-    <!-- Google Tag Manager -->
+    <!-- Google Tag Manager 1-->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
