--- a/apple-product-selection/im-not-real-apple.html
+++ b/apple-product-selection/im-not-real-apple.html
@@ -97,7 +97,7 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-WSW5V2L');</script>
-    <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager 1 -->
     <!-- Hotjar Tracking Code for https://alanlucasli.github.io/apple-product-selection/im-not-real-apple.html -->
     <script>
         (function (h, o, t, j, a, r) {
