--- a/slot-machine/slot-machine.html
+++ b/slot-machine/slot-machine.html
@@ -643,7 +643,7 @@
             let allMoreThanZero = true;
             $.each($(".card-span:odd"), function (index, item) {
                 if (parseFloat(item.innerText) - 1 < 0) {
-                    alert("已全部歸零");
+                    alert("無法全減，請按清除");
                     allMoreThanZero = false;
                     return false;
                 }
